--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laracasts/flash": "^3.2",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^1.1"
+        "laravel/ui": "^1.1",
+        "spatie/laravel-sluggable": "2.2.*"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
